# NeonEngine

./: .gitignore  .gitmodules  CMakeLists.txt
NeonEngine/shaders/: PBR.frag  phong_lighting.frag
NeonEngine/src/: base_model.h  bloom.h  camera.h  cylinder.cpp  game_object.cpp  game_object.h  geometry.cpp  geometry.h  imgui_extension.h  logger.h  mesh.h  model.cpp  neon_engine.cpp  opengl_utils.cpp  pbr.h  rendering.cpp  rendering.h  shader.cpp  shader.h  transform3d.h  user_interface.cpp  user_interface.h
lib/: libs.sh
